--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "dyi-shopping-cart",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server"
   },
   "author": "Anne",
   "license": "ISC",
